--- a/restaurant.html
+++ b/restaurant.html
@@ -11,7 +11,8 @@
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <!-- Main CSS file -->
   <link rel="stylesheet" href="css/styles.css" type="text/css">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
+<!--   <link rel="stylesheet" href="css/resp.css">
+ -->  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
   <title>Restaurant Info</title>
 </head>
 
@@ -32,7 +33,7 @@
   <!-- End header -->
 
   <!-- Beginning main -->
-  <main id="maincontent">
+<main id="maincontent">
     <!-- Beginning map -->
     <section id="map-container">
       <div id="map"></div>
@@ -52,7 +53,7 @@
       <ul id="reviews-list"></ul>
     </section>
     <!-- End reviews -->
-  </main>
+ <!--  --> </main>
   <!-- End main -->
 
   <!-- Beginning footer -->
@@ -69,7 +70,5 @@
   <!-- Google Maps -->
  <!--  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_tKbW6A5pQ-eupxI56myUnHLqYCzOjKo&libraries=places&callback=initMap"></script> -->
   <!-- End scripts -->
-
 </body>
-
 </html>
