--- a/restaurant.html
+++ b/restaurant.html
@@ -18,42 +18,43 @@
 
 <body class="inside">
   <!-- Beginning header -->
-  <header>
+  <header role="banner">
     <!-- Beginning nav -->
-    <nav>
-      <h1><a href="/">Restaurant Reviews</a></h1>
-    </nav>
+    <nav role="navigation">
+      <h1><a href="/" tabindex="1">Restaurant Reviews</a></h1>
+
     <!-- Beginning breadcrumb -->
     <ul id="breadcrumb" >
-      <li><a href="/">Home</a></li>
+      <li><a href="/" tabindex="2">Home</a></li>
     </ul>
+    </nav>
     <!-- End breadcrumb -->
     <!-- End nav -->
   </header>
   <!-- End header -->
 
   <!-- Beginning main -->
-<main id="maincontent">
-    <!-- Beginning map -->
-    <section id="map-container">
-      <div id="map"></div>
-    </section>
-    <!-- End map -->
-    <!-- Beginning restaurant -->
-    <section id="restaurant-container">
-      <h1 id="restaurant-name"></h1>
-      <img id="restaurant-img">
-      <p id="restaurant-cuisine"></p>
-      <p id="restaurant-address"></p>
-      <table id="restaurant-hours"></table>
-    </section>
-    <!-- end restaurant -->
-    <!-- Beginning reviews -->
-    <section id="reviews-container">
-      <ul id="reviews-list"></ul>
-    </section>
-    <!-- End reviews -->
- <!--  --> </main>
+  <main id="maincontent">
+      <!-- Beginning map -->
+      <section id="map-container" >
+        <div id="map"></div>
+      </section>
+      <!-- End map -->
+      <!-- Beginning restaurant -->
+      <section id="restaurant-container">
+        <h1 id="restaurant-name" tabindex="2"></h1>
+        <img id="restaurant-img" tabindex="-1">
+        <p id="restaurant-cuisine" tabindex="2"></p>
+        <p id="restaurant-address" tabindex="2"></p>
+        <table id="restaurant-hours" tabindex="2"></table>
+      </section>
+      <!-- end restaurant -->
+      <!-- Beginning reviews -->
+      <section id="reviews-container" tabindex="2">
+        <ul id="reviews-list"></ul>
+      </section>
+      <!-- End reviews -->
+   </main>
   <!-- End main -->
 
   <!-- Beginning footer -->
