--- a/restaurant.html
+++ b/restaurant.html
@@ -24,8 +24,8 @@
       <h1><a href="/" tabindex="1">Restaurant Reviews</a></h1>
 
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" >
-      <li><a href="/" tabindex="2">Home</a></li>
+    <ul id="breadcrumb" aria-label="breadcrumb">
+      <li><a href="/" tabindex="0">Home</a></li>
     </ul>
     </nav>
     <!-- End breadcrumb -->
@@ -36,21 +36,22 @@
   <!-- Beginning main -->
   <main id="maincontent">
       <!-- Beginning map -->
-      <section id="map-container" >
-        <div id="map"></div>
+      <section id="map-container" aria-hidden="true" role="application">
+        <div id="map" aria-hidden="true" aria-labelledby="aria-map" role="application"></div>
+        <label id="aria-map" class="aria-label">pinned restaurant locations</label>
       </section>
       <!-- End map -->
       <!-- Beginning restaurant -->
       <section id="restaurant-container">
-        <h1 id="restaurant-name" tabindex="2"></h1>
+        <h2 id="restaurant-name" tabindex="0"></h1>
         <img id="restaurant-img" tabindex="-1">
-        <p id="restaurant-cuisine" tabindex="2"></p>
-        <p id="restaurant-address" tabindex="2"></p>
-        <table id="restaurant-hours" tabindex="2"></table>
+        <p id="restaurant-cuisine" tabindex="0"></p>
+        <p id="restaurant-address" tabindex="0"></p>
+        <table id="restaurant-hours" tabindex="0"></table>
       </section>
       <!-- end restaurant -->
       <!-- Beginning reviews -->
-      <section id="reviews-container" tabindex="2">
+      <section id="reviews-container" tabindex="0">
         <ul id="reviews-list"></ul>
       </section>
       <!-- End reviews -->
